fixed logout button overflow on nav bar pull out on small screens

--- a/client/src/components/NavBar/Nav.scss
+++ b/client/src/components/NavBar/Nav.scss
@@ -252,5 +252,9 @@ a.footerLogoLink {
         transform: scale(0.9);
       }
     }
+    nav .middleNav .middleNavInner .logoContainer button {
+      float: left;
+      background: red;
+    }
   }
 }
